<resources>
    <string name="app_name">TrainNotebook</string>
    <string name="start_train">Начать тренировку</string>
    <string name="exercises">Упражнения</string>
    <string name="title_activity_exercises">Exercises</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_exercises">Добавить упражнение</string>
    <string name="exercise_name">Название упражнения</string>
    <string name="choose_units">Единицы измерения:</string>
    <string name="choose_time">Способ измерения:</string>
    <string name="exercise_description">Описание упражнения</string>
    <string name="choose_exercise">Выбрать</string>
    <string name="finish">Завершить</string>
</resources>